@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-21T08:21:57Z",
-  "count_outdated" : 2348,
-  "uniques_outdated" : 543,
-  "count" : 2369,
-  "uniques" : 560,
+  "timestamp" : "2022-08-22T01:55:20Z",
+  "count_outdated" : 2351,
+  "uniques_outdated" : 545,
+  "count" : 2372,
+  "uniques" : 561,
   "clones" : [
-    {
-      "timestamp": "2022-08-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-08-08T00:00:00Z",
       "count": 3,
@@ -56,8 +49,8 @@
     },
     {
       "timestamp": "2022-08-21T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
