@@ -3,11 +3,6 @@
   "uniques": 12,
   "clones": [
     {
-      "timestamp": "2022-08-07T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-08-08T00:00:00Z",
       "count": 3,
       "uniques": 2
@@ -39,7 +34,7 @@
     },
     {
       "timestamp": "2022-08-21T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
